--- a/as.html
+++ b/as.html
@@ -15,35 +15,37 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <nav class ="navbar navbar-expand-lg navbar-light fixed-top">
-            <div class ="container">
+        <div class="container-fluid mb-5">
+        <nav class ="navbar navbar-expand navbar-light fixed-top">
+            <div class="col-lg-4 col-md-4 col-sm-3 col-1 d-none d-lg-block d-md-block d-sm-block">
                 <a href="#" class="navbar-brand"><img src="asana.png" alt="logo" style="width:60px;"><strong>asana rebel</strong></a>
-                <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-                    <span class="navbar-toggler-icon"> </span>
-                </button>
-                <div class="collapse navbar-collapse" id="main-navigation">
+
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-3 col-1 d-lg-none d-md-none d-sm-none d-block" style="border:1px solid black !important;">
+                <a href="#" class="broder"><img src="asana.png" alt="logo" style="width:40px;"></a>
+            </div>
+            <div class="justify-content-end col-lg-8 col-md-8 col-sm-9 col-11">
                     <button class ="btn btn-light navbar-button ml-auto">Help</button>
                     <button class ="btn1 btn-success navbar-button">Start Today</button>
-                </div>
             </div>
         </nav>
-        <div class ="container-fluid">
-            <div class ="grid">
-                <div class = "col-sm-6" style="margin-top:80px" >
-                    2021.Healthy lifestyle for everyone.Get 50% off now!
+        </div>
+        
+        <div class="container mt-5 pt-5">
+           <div class ="row mt-5">
+               <div class="col-lg-6 col-md-12 col-sm-12 col-12 mb-5">
+                   <h1 class="font-weight-bold mt-5">Healthy lifestyle <p>for everyone.</p></h1>
+                    <p>Get the best of health and fitness,all in one place.</p>
+                    <button type="button1" class="btn py-2" style ="background-color: #41cd8c; color:white">START NOW</button>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12 ">
+                    <img src="iphone.png" class="img-fluid" style="max-height:600px;">
                 </div>
             </div>
         </div>
-        <div class="container">
-           <div class ="aa">
-                    <h1 class="asd">Healthy lifestyle <p>for everyone.</p></h1>
-                    <p class ="qwe">Get the best of health and fitness,all in one place.</p>
-                    <button type="button1" class="btn">START NOW</button>
-                    <div class ="im">
-                        <img src="iphone.png" width="400" height="600" >
-                    </div>
-                </div>
+               <!--<div class="col-lg-6 col-md-12 col-sm-12 col-12">
                 <div class ="section-exercise">
+            
                     <h6 class ="qa">Excercise</h6>
                     <h1 class="asdp">Experience workouts like <br>never before.</br></h1>
                     <p class ="qwet">Dive into your own personal gym, with full access to hundreds of</p>
@@ -52,6 +54,7 @@
                     <div class ="im1">
                         <img src="iphone.png" width="400" height="600" >
                     </div>
+                </div>
                 </div>
                 <div class ="section-sleep">
                     <h6 class ="qa"><strong>Sleep</strong></h6>
@@ -80,5 +83,6 @@
                     </div>
                 </div> 
         </div>
+    </div>-->
     </body>
 </html>
